# LogiPrune

./: LICENSE  README.md  pyproject.toml
logiprune/: __init__.py  completeness.py  contradiction.py  core.py  decomposer.py  discretize.py  entropy.py
