[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logiprune"
version = "0.2.4"
description = "Smarter AI training through propositional logic and information theory."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Víctor Manuel Peralta Del Riego"}]
keywords = ["machine-learning", "hyperparameter-optimization", "propositional-logic", "xai", "greenai", "xgboost"]

[project.optional-dependencies]
xgboost = ["xgboost>=1.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["logiprune*"]

[project.urls]
Homepage = "https://github.com/vperaltadelriego/LogiPrune"
"Bug Tracker" = "https://github.com/vperaltadelriego/LogiPrune/issues"
Documentation = "https://logiprune.readthedocs.io"
"Paper 1" = "https://arxiv.org/abs/XXXX.XXXXX"
"Paper 2" = "https://arxiv.org/abs/XXXX.XXXXX"
